syntax = "proto3";

package Greeter;

service GreeterService {

  // 'GetFeature' rpc performs the following operations on the 'req' message fields:
  // 1) Increments req_id by 1 and saves in res_id of 'res' message.
  // 2) Increments req_price of req_oneof by 1 and saves in res_oneof's res_price field of 'res' message. 
  // 3) Appends '_response' to the anotherField field of message_a in req_oneof and saves in corresponding res_oneof's message_a field of 'res' message.
  // 4) Appends '_response' to the data_a1 and data_a2 fields of oneof_a field of message_a field in req_oneof and saves in corresponding res_oneof's message_a field of 'res' message.
  rpc GetFeature(req) returns (res) {}
}

message req {
  int32 req_id = 1;
  oneof req_oneof {
    MessageA message_a = 2;
    double req_price = 3;
  }
}

message res {
  int32 res_id = 1;
  oneof res_oneof {
    MessageA message_a = 2;
    double res_price = 3;
  }
}

message MessageA {
  string anotherField = 3;
  oneof oneof_a {
    string data_a1 = 1;
    string data_a2 = 2;
  }
}
